<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="app_theme">Theme</string>
    <string name="help">Help</string>
    <string name="library">Library</string>
    <string name="report_issue">Report Issues</string>
    <string name="presets">Presets</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="support_development">Support Development</string>
...
    <string name="dismiss">Dismiss</string>
    <string name="name">Name</string>
    <string name="pause">Pause</string>
    <string name="preset_already_exists">A preset with that name already exists. Try a different one!</string>
    <string name="preset_name_cannot_be_empty">The preset name is missing. Please enter a unique one!</string>
    <string name="preset_saved">Awesome! Your preset has been saved.</string>
    <string name="save">Save</string>
    <string name="save_preset">Save Preset</string>
    <string name="play">Play</string>
    <string name="play_pause">play or pause</string>
    <string name="stop">Stop</string>
    <string name="volume">Sound volume</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="delete">Delete</string>
    <string name="open_context_menu">Open context menu</string>
    <string name="preset_delete_confirmation">Are you sure you want to delete "%1$s"? You cannot undo this action.</string>
    <string name="preset_deleted">Your preset has been successfully deleted!</string>
    <string name="preset_does_not_exist">It looks like this preset is no longer available. It may have been deleted.</string>
    <string name="preset_info__description">You can easily create your own presets by playing sounds and then saving them from the sound library. Just hit the Save button and give it a unique name.</string>
    <string name="rename">Rename</string>
    <string name="pinned_shortcuts_not_supported">Sorry, it looks like your home screen app doesn\'t support shortcuts.</string>
    <string name="presets_as_home_screen_summary">Make your presets visible when you open the app by enabling this option. You\'ll need to restart the app for the changes to take effect.</string>
    <string name="auto_sleep_schedule_cancelled">Sleep timer cancelled! The app will stay active.</string>
    <string name="reset">Reset</string>
    <string name="sleep_timer_description">Noice will automatically turn off when the timer ends. Use the buttons below to set the timer and add more time.</string>
    <string name="select_preset">Select Preset</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_system_default">System default</string>
    <string name="app_description">Focus, meditate and relax with natural calming noise.</string>
    <string name="appintro__chromecast_desc">Easily share Noice\'s calming ambience on other Chromecast-enabled devices, such as speakers or TVs.</string>
    <string name="appintro__chromecast_title">Chromecast enabled</string>
    <string name="appintro__getting_started_desc_0">Explore all the features by swiping left!</string>
    <string name="appintro__getting_started_desc_1">Let\'s get started!</string>
    <string name="appintro__getting_started_title">Welcome</string>
...
    </string>
    <string name="in_app_feedback__title">Submit a review</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="notification_channel_default__description">Sound playback controls</string>
    <string name="notification_channel_default__name">Sound Playback</string>
    <string name="add_to_app_shortcuts">Add to app shortcuts</string>
    <string name="remove_from_app_shortcuts">Remove from app shortcuts</string>
    <string name="app_shortcut_removed">Preset has been removed from app shortcuts!</string>
    <string name="app_shortcut_created">Preset has been added to app shortcuts!</string>
    <string name="app_shortcut_creation_failed">Failed to add the preset to app shortcuts!</string>
    <string name="settings">Settings</string>
    <string name="presets_as_home_screen">Presets as home screen</string>
    <string name="appearance">Appearance</string>
...
    <string name="skip_to_prev">Previous preset</string>
    <string name="skip_to_next">Next preset</string>
    <string name="unsaved_preset">Unsaved Preset</string>
    <string name="ignore_audio_focus_changes">Ignore audio focus changes</string>
    <string name="ignore_audio_focus_changes_summary_off">Pause Noice when other apps play audio</string>
    <string name="ignore_audio_focus_changes_summary_on">Continue playing Noice even when other apps play audio</string>
    <string name="share">Share</string>
    <string name="export_presets">Export to a file</string>
    <string name="export_presets_summary">Save a copy of your current presets to an external file</string>
    <string name="import_presets">Import from a file</string>
    <string name="import_presets_summary">Importing saved presets from an external file will replace any existing presets</string>
    <string name="remove_all_app_shortcuts">Remove all app shortcuts</string>
    <string name="remove_all_app_shortcuts_confirmation">Are you sure you want to remove all preset shortcuts from the app shortcut menu? This action cannot be undone.</string>
    <string name="all_app_shortcuts_removed">All app shortcuts have been removed!</string>
    <string name="failed_to_write_file">Sorry, we were unable to write to the selected file!</string>
    <string name="export_presets_successful">Presets exported successfully, enjoy!</string>
    <string name="failed_to_read_file">Sorry, we couldn\'t read the selected file!</string>
    <string name="invalid_import_file_format">Invalid file format! Please check the import file.</string>
...
