...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/empty_list_hint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:gravity="center"
    android:text="@string/preset_info__description"
    android:textAppearance="?attr/textAppearanceBody1"
    android:textColor="@color/material_on_background_disabled"
    app:drawableTint="@color/material_on_background_disabled"
    app:drawableTopCompat="@drawable/ic_info_48dp" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</FrameLayout>

