<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="24dp">

  <TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?attr/titleTextAppearance" />

  <View
    android:layout_width="match_parent"
    android:layout_height="24dp" />

  <LinearLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:orientation="horizontal">

    <!-- marginStart is added by the default button style. See styles.xml for details. -->
    <Button
      android:id="@+id/neutral"
      style="?attr/buttonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="0dp"
      android:layout_marginTop="16dp"
      android:visibility="gone" />

    <View
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_weight="1" />

    <Button
      android:id="@+id/negative"
      style="?attr/buttonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:visibility="gone" />

    <Button
      android:id="@+id/positive"
      style="?attr/buttonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:visibility="gone" />

  </LinearLayout>

</LinearLayout>
